[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/entities/props/water.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 6 )

[node name="Water" type="Area2D"]
collision_layer = 0
collision_mask = 64
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 20, 6 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Water_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Water_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
